apps/test-app/base/test-app-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-app-vs
  namespace: test-app
  labels:
    app: test-app
    version: 0.0.1
    backstage.io/kubernetes-id: test-app
spec:
  gateways:
  - istio-system/istio-ingressgateway
  hosts:
  - test-app.diegoluisi.eti.br
  http:
  - name: primary
    route:
    - destination:
        host: test-app-svc
      weight: 100
